<?xml version="1.0" encoding="utf-8"?>


<com.getbase.floatingactionbutton.FloatingActionsMenu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:layout_marginEnd="@dimen/fab_right_margin"
    android:layout_marginRight="@dimen/fab_right_margin"
    android:layout_marginBottom="8dp"
    android:visibility="invisible"
    fab:fab_addButtonColorNormal="@color/colorAccent"
    fab:fab_addButtonColorPressed="@color/colorAccentPressed"
    fab:fab_addButtonPlusIconColor="@color/white"
    fab:fab_labelStyle="@style/fab_labels_style"
    fab:fab_labelsPosition="left">

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fab:fab_colorNormal="@color/action_color"
        fab:fab_colorPressed="@color/action_color_pressed"
        fab:fab_icon="@drawable/ic_camera_alt_white_48dp"
        fab:fab_size="mini"
        fab:fab_title="@string/photo" />

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_checklist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fab:fab_colorNormal="@color/colorPrimary"
        fab:fab_colorPressed="@color/colorPrimaryDark"
        fab:fab_icon="@drawable/ic_format_list_bulleted_white_48dp"
        fab:fab_size="mini"
        fab:fab_title="@string/checklist" />

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        fab:fab_colorNormal="@color/colorAccent"
        fab:fab_colorPressed="@color/colorAccentPressed"
        fab:fab_icon="@drawable/ic_file_document_box_white_48dp"
        fab:fab_size="mini"
        fab:fab_title="@string/text_note" />

</com.getbase.floatingactionbutton.FloatingActionsMenu>
