...
            android:textColorHint="@color/text_color_lighter"
            android:textCursorDrawable="@null"
            pixlui:typeface="RobotoSlab-Regular.ttf" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reminder_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/icon_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
...
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/reminder"
            android:src="@drawable/ic_alarm_add_black_18dp" />

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:gravity="center_vertical"
            android:hint="@string/add_reminder"
            android:textAppearance="@style/Text.Small"
...
