<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/detail_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/activity_additional_margin"
        android:layout_marginLeft="@dimen/activity_additional_margin"
        android:layout_marginEnd="@dimen/activity_additional_margin"
        android:layout_marginRight="@dimen/activity_additional_margin"
        android:animateLayoutChanges="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/detail_wrapper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:animateLayoutChanges="true"
            android:background="@color/gray_bg"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_half"
            android:paddingLeft="@dimen/padding_half"
            android:paddingTop="@dimen/padding_half"
            android:paddingEnd="@dimen/padding_half"
            android:paddingRight="@dimen/padding_half">

            <LinearLayout
                android:id="@+id/detail_tile_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:background="@drawable/bg_card"
                android:paddingBottom="2dp">

                <LinearLayout
                    android:id="@+id/title_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/tag_marker"
                        android:layout_width="7dp"
                        android:layout_height="match_parent"
                        android:background="@null" />

                    <com.neopixl.pixlui.components.edittext.EditText
                        android:id="@+id/detail_title"
                        paddingEnd="16dp"
                        paddingStart="6dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/title"
                        android:inputType="textCapSentences"
                        android:linksClickable="false"
                        android:paddingStart="6dp"
                        android:paddingLeft="6dp"
                        android:paddingTop="6dp"
                        android:paddingEnd="16dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="6dp"
                        android:textAppearance="@style/Text.Big"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/text_color_lighter"
                        android:textCursorDrawable="@null"
                        pixlui:typeface="RobotoSlab-Bold.ttf" />
                </LinearLayout>
            </LinearLayout>

            <android.support.design.widget.CoordinatorLayout
                android:id="@+id/detail_content_card"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/bg_card"
                android:paddingBottom="2dp">

                <ScrollView
                    android:id="@+id/content_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbarSize="4dp"
                    android:scrollbarStyle="outsideOverlay"
                    android:scrollbarThumbVertical="@drawable/scroll_bar">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ViewStub
                            android:id="@+id/detail_attachments_above"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout="@layout/fragment_detail_attachments" />

                        <include layout="@layout/fragment_detail_content" />

                        <ViewStub
                            android:id="@+id/detail_attachments_below"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout="@layout/fragment_detail_attachments" />

                    </LinearLayout>
                </ScrollView>
            </android.support.design.widget.CoordinatorLayout>

            <LinearLayout
                android:id="@+id/detail_timestamps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="3dp"
                android:paddingBottom="3dp">

                <com.neopixl.pixlui.components.textview.TextView
                    android:id="@+id/creation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|start"
                    android:padding="0dp"
                    android:textAppearance="@style/Text.Small"
                    pixlui:typeface="Roboto-Regular.ttf" />

                <com.neopixl.pixlui.components.textview.TextView
                    android:id="@+id/last_modification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:padding="0dp"
                    android:textAppearance="@style/Text.Small"
                    pixlui:typeface="Roboto-Regular.ttf" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/snackbar_placeholder"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
